--- a/05 - Introdução a criação de websites com HTML5 e CSS3/index.html
+++ b/05 - Introdução a criação de websites com HTML5 e CSS3/index.html
@@ -7,6 +7,27 @@
     <title>Cezar Aielo</title>
   </head>
   <body>
-    Cezar Aielo
+    <header>
+      <h1>Cezar Aielo</h1>
+    </header>
+    <section>
+      <header>
+        <h2>Posts</h2>
+      </header>
+      <article>
+        <header>
+          <h3>Post #1</h3>
+        </header>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and
+          <a href="https://www.typescriptlang.org/" target="_blank"
+            >typesetting industry</a
+          >. Lorem Ipsum has been the industry's standard dummy text ever since
+          the 1500s, when an unknown printer took a galley of type and scrambled
+          it to make a type specimen book.
+        </p>
+      </article>
+    </section>
+    <footer></footer>
   </body>
 </html>
