--- a/05 - Introdução a criação de websites com HTML5 e CSS3/index.html
+++ b/05 - Introdução a criação de websites com HTML5 e CSS3/index.html
@@ -22,9 +22,11 @@
           Lorem Ipsum is simply dummy text of the printing and
           <a href="https://www.typescriptlang.org/" target="_blank"
             >typesetting industry</a
-          >. Lorem Ipsum has been the industry's standard dummy text ever since
-          the 1500s, when an unknown printer took a galley of type and scrambled
-          it to make a type specimen book.
+          >. Lorem Ipsum has been the
+          <a href="mailto:guhamm@email.com">industry's standard dummy</a> a text
+          ever since the <a href="tel:+5551999966500">1500s</a>, when an unknown
+          printer took a galley of type and scrambled it to make a type specimen
+          book.
         </p>
       </article>
     </section>
