--- a/05 - Introdução a criação de websites com HTML5 e CSS3/index.html
+++ b/05 - Introdução a criação de websites com HTML5 e CSS3/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <img src="assets/guto_perfil.jpg" alt="foto 3x4 perfil Guto" />
       <h1>Cezar Aielo</h1>
     </header>
     <section>
@@ -17,6 +18,10 @@
       <article>
         <header>
           <h3>Post #1</h3>
+          <img
+            src="assets/roonz-nl-unsplash.jpg"
+            alt="foto monitor notebook mostrando código html"
+          />
         </header>
         <p>
           Lorem Ipsum is simply dummy text of the printing and
@@ -30,6 +35,20 @@
         </p>
       </article>
     </section>
-    <footer></footer>
+    <footer>
+      <ul>
+        <li>
+          <a href="mailto:guhamm@hotmail" target="_blank">E-mail</a>
+        </li>
+        <li>
+          <a href="https://linkedin.com/in/cezar-aielo" target="_blank"
+            >Linkedin</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/GutoAielo" target="_blank">GitHub</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
