--- a/05 - Introdução a criação de websites com HTML5 e CSS3/index.html
+++ b/05 - Introdução a criação de websites com HTML5 e CSS3/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <header>
-      <img src="assets/guto_perfil.jpg" alt="foto 3x4 perfil Guto" />
+      <img
+        class="photo"
+        src="assets/guto_perfil.jpg"
+        alt="foto 3x4 perfil Guto"
+      />
       <h1 id="title">Cezar Aielo</h1>
     </header>
     <section>
@@ -20,11 +24,12 @@
         <header>
           <h3 class="post_title">Post #1</h3>
           <img
+            class="post_image"
             src="assets/roonz-nl-unsplash.jpg"
             alt="foto monitor notebook mostrando código html"
           />
         </header>
-        <p>
+        <p class="post_content">
           Lorem Ipsum is simply dummy text of the printing and
           <a href="https://www.typescriptlang.org/" target="_blank"
             >typesetting industry</a
