--- a/05 - Introdução a criação de websites com HTML5 e CSS3/index.html
+++ b/05 - Introdução a criação de websites com HTML5 e CSS3/index.html
@@ -42,7 +42,7 @@
       </article>
     </section>
     <footer>
-      <ol>
+      <ul class="contact_list">
         <li>
           <a href="mailto:guhamm@hotmail" target="_blank">E-mail</a>
         </li>
@@ -54,7 +54,7 @@
         <li>
           <a href="https://github.com/GutoAielo" target="_blank">GitHub</a>
         </li>
-      </ol>
+      </ul>
     </footer>
   </body>
 </html>
